--- a/Draw/Controller/Draw/DrawViewController~iPad.xib
+++ b/Draw/Controller/Draw/DrawViewController~iPad.xib
@@ -639,7 +639,7 @@
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">DrawViewController</string>
-					<string key="superclassName">PPViewController</string>
+					<string key="superclassName">SuperDrawViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="clickChangeRoomButton:">id</string>
 						<string key="clickEraserButton:">id</string>
@@ -666,20 +666,13 @@
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="cleanButton">UIButton</string>
-						<string key="clockButton">UIButton</string>
 						<string key="eraserButton">UIButton</string>
 						<string key="penButton">PenView</string>
-						<string key="popupButton">UIButton</string>
-						<string key="turnNumberButton">UIButton</string>
 						<string key="wordButton">UIButton</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="cleanButton">
 							<string key="name">cleanButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="clockButton">
-							<string key="name">clockButton</string>
 							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="eraserButton">
@@ -689,14 +682,6 @@
 						<object class="IBToOneOutletInfo" key="penButton">
 							<string key="name">penButton</string>
 							<string key="candidateClassName">PenView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popupButton">
-							<string key="name">popupButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="turnNumberButton">
-							<string key="name">turnNumberButton</string>
-							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="wordButton">
 							<string key="name">wordButton</string>
@@ -722,6 +707,33 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/PenView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SuperDrawViewController</string>
+					<string key="superclassName">PPViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="clockButton">UIButton</string>
+						<string key="popupButton">UIButton</string>
+						<string key="turnNumberButton">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="clockButton">
+							<string key="name">clockButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="popupButton">
+							<string key="name">popupButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="turnNumberButton">
+							<string key="name">turnNumberButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SuperDrawViewController.h</string>
 					</object>
 				</object>
 			</array>
