update PassWordDialog xib for ipad

--- a/Draw/Controller/Common/PassWordDialog~iPad.xib
+++ b/Draw/Controller/Common/PassWordDialog~iPad.xib
@@ -58,7 +58,7 @@
 							<object class="IBUIButton" id="498891824">
 								<reference key="NSNextResponder" ref="792848927"/>
 								<int key="NSvFlags">283</int>
-								<string key="NSFrame">{{384, 372}, {168, 74}}</string>
+								<string key="NSFrame">{{370, 356}, {168, 74}}</string>
 								<reference key="NSSuperview" ref="792848927"/>
 								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -88,7 +88,7 @@
 							<object class="IBUIButton" id="992100340">
 								<reference key="NSNextResponder" ref="792848927"/>
 								<int key="NSvFlags">286</int>
-								<string key="NSFrame">{{20, 372}, {168, 74}}</string>
+								<string key="NSFrame">{{40, 356}, {168, 74}}</string>
 								<reference key="NSSuperview" ref="792848927"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="498891824"/>
@@ -242,6 +242,7 @@
 				<string key="NSFrame">{{0, 20}, {768, 1004}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="792848927"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MC42NjY2NjY2NjY3IDAuNzMAA</bytes>
