--- a/Draw/Controller/Draw/ShowDrawController~iPad.xib
+++ b/Draw/Controller/Draw/ShowDrawController~iPad.xib
@@ -130,13 +130,13 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">wood_button@2x.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="574553910">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="693095152">
 							<int key="type">1</int>
-							<double key="pointSize">18</double>
+							<double key="pointSize">36</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="961203582">
+						<object class="NSFont" key="IBUIFont" id="243647671">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">18</double>
+							<double key="NSSize">36</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -157,8 +157,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="846866722">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -177,8 +177,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="56659524">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -197,8 +197,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="203811145">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -217,8 +217,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="222118907">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -237,8 +237,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="85831693">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -257,8 +257,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="871843448">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -277,8 +277,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="198840917">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -304,8 +304,8 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">buybutton@2x.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="584851441">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -325,8 +325,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="948072543">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -346,8 +346,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="426871901">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -367,8 +367,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="1067162726">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -388,8 +388,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="750717572">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -409,8 +409,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="469820418">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -430,8 +430,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="281666836">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -451,8 +451,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="107305617">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -472,8 +472,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="293486227">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -493,8 +493,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="757265990">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -514,8 +514,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="258082102">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -535,8 +535,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="972730118">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -556,8 +556,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="343379080">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -577,8 +577,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="582479401">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -598,8 +598,8 @@
 						<reference key="IBUINormalTitleColor" ref="90917541"/>
 						<reference key="IBUINormalTitleShadowColor" ref="374436567"/>
 						<reference key="IBUINormalBackgroundImage" ref="231783031"/>
-						<reference key="IBUIFontDescription" ref="574553910"/>
-						<reference key="IBUIFont" ref="961203582"/>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="423777887">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -662,15 +662,8 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">guess_popup@2x.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
-							<double key="pointSize">36</double>
-						</object>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">36</double>
-							<int key="NSfFlags">16</int>
-						</object>
+						<reference key="IBUIFontDescription" ref="693095152"/>
+						<reference key="IBUIFont" ref="243647671"/>
 					</object>
 					<object class="IBUIButton" id="258493630">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -1121,7 +1114,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">ShowDrawController</string>
-					<string key="superclassName">PPViewController</string>
+					<string key="superclassName">SuperDrawViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="clickGuessDoneButton:">id</string>
 						<string key="clickRunAway:">id</string>
@@ -1136,19 +1129,33 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">guessDoneButton</string>
+						<string key="NS.object.0">UIButton</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">guessDoneButton</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">guessDoneButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ShowDrawController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SuperDrawViewController</string>
+					<string key="superclassName">PPViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="clockButton">UIButton</string>
-						<string key="guessDoneButton">UIButton</string>
 						<string key="popupButton">UIButton</string>
 						<string key="turnNumberButton">UIButton</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="clockButton">
 							<string key="name">clockButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="guessDoneButton">
-							<string key="name">guessDoneButton</string>
 							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="popupButton">
@@ -1162,7 +1169,7 @@
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShowDrawController.h</string>
+						<string key="minorKey">./Classes/SuperDrawViewController.h</string>
 					</object>
 				</object>
 			</array>
