--- a/Draw/Controller/Draw/ShowDrawController.xib
+++ b/Draw/Controller/Draw/ShowDrawController.xib
@@ -1116,7 +1116,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">ShowDrawController</string>
-					<string key="superclassName">PPViewController</string>
+					<string key="superclassName">SuperDrawViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="clickGuessDoneButton:">id</string>
 						<string key="clickRunAway:">id</string>
@@ -1131,19 +1131,33 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">guessDoneButton</string>
+						<string key="NS.object.0">UIButton</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">guessDoneButton</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">guessDoneButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ShowDrawController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SuperDrawViewController</string>
+					<string key="superclassName">PPViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="clockButton">UIButton</string>
-						<string key="guessDoneButton">UIButton</string>
 						<string key="popupButton">UIButton</string>
 						<string key="turnNumberButton">UIButton</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="clockButton">
 							<string key="name">clockButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="guessDoneButton">
-							<string key="name">guessDoneButton</string>
 							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="popupButton">
@@ -1157,7 +1171,7 @@
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShowDrawController.h</string>
+						<string key="minorKey">./Classes/SuperDrawViewController.h</string>
 					</object>
 				</object>
 			</array>
