--- a/Draw/Controller/Share/ReplayController~iPad.xib
+++ b/Draw/Controller/Share/ReplayController~iPad.xib
@@ -40,8 +40,9 @@
 					<object class="IBUIImageView" id="51537371">
 						<reference key="NSNextResponder" ref="69976092"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{320, 460}</string>
+						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="69976092"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="748490988"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -53,8 +54,9 @@
 					<object class="IBUIImageView" id="748490988">
 						<reference key="NSNextResponder" ref="69976092"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{320, 460}</string>
+						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="69976092"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="120271323"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -66,8 +68,9 @@
 					<object class="IBUIImageView" id="120271323">
 						<reference key="NSNextResponder" ref="69976092"/>
 						<int key="NSvFlags">306</int>
-						<string key="NSFrameSize">{320, 50}</string>
+						<string key="NSFrameSize">{768, 109}</string>
 						<reference key="NSSuperview" ref="69976092"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="349717747"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -79,8 +82,9 @@
 					<object class="IBUIButton" id="349717747">
 						<reference key="NSNextResponder" ref="69976092"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{7, 6}, {37, 37}}</string>
+						<string key="NSFrame">{{16, 13}, {88, 80}}</string>
 						<reference key="NSSuperview" ref="69976092"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1024259948"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -115,8 +119,9 @@
 					<object class="IBUILabel" id="1024259948">
 						<reference key="NSNextResponder" ref="69976092"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{43, -2}, {220, 50}}</string>
+						<string key="NSFrame">{{103, -5}, {528, 109}}</string>
 						<reference key="NSSuperview" ref="69976092"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1066698417"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -144,8 +149,9 @@
 					<object class="IBUIButton" id="1066698417">
 						<reference key="NSNextResponder" ref="69976092"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{242, 5}, {69, 35}}</string>
+						<string key="NSFrame">{{580, 11}, {165, 76}}</string>
 						<reference key="NSSuperview" ref="69976092"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1037593102"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -172,8 +178,9 @@
 					<object class="IBUIImageView" id="838780682">
 						<reference key="NSNextResponder" ref="69976092"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{81, 412}, {158, 47}}</string>
+						<string key="NSFrame">{{194, 899}, {379, 102}}</string>
 						<reference key="NSSuperview" ref="69976092"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="121140273"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -185,8 +192,9 @@
 					<object class="IBUIImageView" id="1037593102">
 						<reference key="NSNextResponder" ref="69976092"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{60, 48}, {194, 28}}</string>
+						<string key="NSFrame">{{144, 104}, {465, 61}}</string>
 						<reference key="NSSuperview" ref="69976092"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1050140856"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -198,8 +206,9 @@
 					<object class="IBUILabel" id="121140273">
 						<reference key="NSNextResponder" ref="69976092"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{97, 428}, {127, 21}}</string>
+						<string key="NSFrame">{{232, 934}, {304, 45}}</string>
 						<reference key="NSSuperview" ref="69976092"/>
+						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -227,8 +236,9 @@
 					<object class="IBUIView" id="1050140856">
 						<reference key="NSNextResponder" ref="69976092"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{20, 103.5}, {280, 295}}</string>
+						<string key="NSFrame">{{48, 208.5}, {672, 678}}</string>
 						<reference key="NSSuperview" ref="69976092"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="838780682"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -240,16 +250,14 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
 				</array>
-				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
+				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="51537371"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
 					<reference key="NSCustomColorSpace" ref="369372709"/>
-				</object>
-				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics">
-					<int key="IBUIStatusBarStyle">2</int>
 				</object>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
@@ -434,7 +442,69 @@
 			<nil key="sourceID"/>
 			<int key="maxID">21</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">PPViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ReplayController</string>
+					<string key="superclassName">PPViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="clickBackButton:">id</string>
+						<string key="clickShareButton:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="clickBackButton:">
+							<string key="name">clickBackButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="clickShareButton:">
+							<string key="name">clickShareButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backButton">UIButton</string>
+						<string key="shareButton">UIButton</string>
+						<string key="showHolderView">UIView</string>
+						<string key="titleLabel">UILabel</string>
+						<string key="wordLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backButton">
+							<string key="name">backButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shareButton">
+							<string key="name">shareButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="showHolderView">
+							<string key="name">showHolderView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleLabel">
+							<string key="name">titleLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="wordLabel">
+							<string key="name">wordLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ReplayController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
