--- a/Draw/Controller/Share/ShareEditController~iPad.xib
+++ b/Draw/Controller/Share/ShareEditController~iPad.xib
@@ -42,9 +42,8 @@
 					<object class="IBUIImageView" id="426896309">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{320, 460}</string>
+						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="491680879"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -56,9 +55,8 @@
 					<object class="IBUIImageView" id="1018434614">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{0, 113}, {320, 286}}</string>
+						<string key="NSFrame">{{0, 246}, {768, 624}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="268363428"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -70,9 +68,8 @@
 					<object class="IBUIImageView" id="491680879">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">306</int>
-						<string key="NSFrameSize">{320, 50}</string>
+						<string key="NSFrameSize">{768, 109}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="350137839"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -84,9 +81,8 @@
 					<object class="IBUIImageView" id="289642412">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">314</int>
-						<string key="NSFrame">{{7, 396}, {307, 61}}</string>
+						<string key="NSFrame">{{7, 864}, {755, 133}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="306897565"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -94,9 +90,8 @@
 					<object class="IBUIButton" id="350137839">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{6, 5}, {37, 37}}</string>
+						<string key="NSFrame">{{14, 11}, {88, 80}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="6438040"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -131,9 +126,8 @@
 					<object class="IBUIButton" id="342380466">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{238, 7}, {75, 31}}</string>
+						<string key="NSFrame">{{571, 15}, {180, 67}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="13410777"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -159,9 +153,8 @@
 					<object class="IBUITextView" id="306897565">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">314</int>
-						<string key="NSFrame">{{7, 396}, {306, 61}}</string>
+						<string key="NSFrame">{{7, 864}, {754, 133}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC45NDkwMTk2MDc4IDAuOTcyNTQ5MDE5NiAwLjk3NjQ3MDU4ODIgMAA</bytes>
@@ -187,9 +180,8 @@
 					<object class="IBUIImageView" id="268363428">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">-2147483329</int>
-						<string key="NSFrame">{{31, 130}, {259, 259}}</string>
+						<string key="NSFrame">{{74, 283}, {621, 565}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="289642412"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -197,9 +189,8 @@
 					<object class="IBUILabel" id="6438040">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{51, 12}, {168, 21}}</string>
+						<string key="NSFrame">{{122, 26}, {403, 45}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="342380466"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -233,9 +224,8 @@
 					<object class="IBUIImageView" id="678441152">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">314</int>
-						<string key="NSFrame">{{0, 93}, {320, 40}}</string>
+						<string key="NSFrame">{{0, 203}, {768, 87}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1018434614"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -247,26 +237,21 @@
 					<object class="IBUIScrollView" id="13410777">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{0, 46}, {320, 48}}</string>
+						<string key="NSFrame">{{0, 100}, {768, 104}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="678441152"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
 				</array>
-				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
+				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="426896309"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
 					<reference key="NSCustomColorSpace" ref="75519176"/>
-				</object>
-				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics">
-					<int key="IBUIStatusBarStyle">2</int>
 				</object>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
@@ -491,83 +476,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">32</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PPViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ShareEditController</string>
-					<string key="superclassName">PPViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="infuseImageView">SynthesisView</string>
-						<string key="inputBackground">UIImageView</string>
-						<string key="myImageBackground">UIImageView</string>
-						<string key="myImageView">UIImageView</string>
-						<string key="patternBar">UIImageView</string>
-						<string key="patternsGallery">UIScrollView</string>
-						<string key="shareButton">UIButton</string>
-						<string key="shareTextField">UITextView</string>
-						<string key="shareTitleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="infuseImageView">
-							<string key="name">infuseImageView</string>
-							<string key="candidateClassName">SynthesisView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="inputBackground">
-							<string key="name">inputBackground</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="myImageBackground">
-							<string key="name">myImageBackground</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="myImageView">
-							<string key="name">myImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="patternBar">
-							<string key="name">patternBar</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="patternsGallery">
-							<string key="name">patternsGallery</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shareButton">
-							<string key="name">shareButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shareTextField">
-							<string key="name">shareTextField</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shareTitleLabel">
-							<string key="name">shareTitleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShareEditController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">SynthesisView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/SynthesisView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
